# DumpDate

./: .gitignore  Dockerfile  README.md  build_address_cache.py  build_cache.py  docker-compose.yml  example.py  ical_url_structure.md  pyproject.toml  run_bot.py  run_dashboard.py  smart_schedule.py
.github/workflows/: ci.yml
dashboard/: app.py
dashboard/templates/: dashboard.html  index.html
database_handler/: database_handler.py
dump_date/: app_factory.py  logging_config.py  main.py
schedule_parser/: address_cache.py  address_finder.py  config.py  database.py  db_manager.py  exceptions.py  facade.py  ical_downloader.py  ics_parser.py  models.py  services.py
schedule_parser/services/: address_service.py  notification_service.py  persistence_service.py  schedule_service.py  smart_schedule_service.py  subscription_service.py
schedule_retriever/: schedule_retriever.py
scripts/: test_scheduling_fit.py
telegram_bot/: address_matcher.py  bot.py  context.py  logging_config.py  scheduler.py  subscription_manager.py
tests/: sample.ics  test_address_cache.py  test_address_finder.py  test_address_service.py  test_dashboard.py  test_db_manager.py  test_facade.py  test_ical_downloader.py  test_notification_service.py  test_parser.py  test_persistence_service.py  test_schedule_retriever.py  test_schedule_service.py  test_smart_schedule_service.py  test_subscription_service.py  test_telegram_bot.py  test_telegram_scheduler.py
