[tool.poetry]
name = "schedule-parser"
version = "0.1.0"
description = "A package to parse .ics files from Dresden's municipal waste schedule and store event data in a local SQLite database."
authors = ["Jules <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "schedule_parser"}]

[tool.poetry.dependencies]
python = "^3.12"
icalendar = "^5.0.12"
requests = "^2.31.0"
pandas = "^2.3.3"
python-telegram-bot = "^21.4"
thefuzz = "^0.22.1"
python-levenshtein = "^0.25.1"
holidays = "^0.83"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
black = "^25.9.0"
isort = "^7.0.0"
ruff = "^0.14.1"

[tool.poetry.group.dashboard.dependencies]
Flask = "^3.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
