[tool.poetry]
name = "DumpDate"
version = "0.1.0"
description = "DumpDate is a smart reminder bot that keeps track of the local garbage collection schedule in Dresden and notifies you before pickup."
authors = ["Jules <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "schedule_parser"}, {include = "telegram_bot"}, {include = "dashboard"}, {include = "dump_date"}]

[tool.poetry.dependencies]
python = "^3.12"
icalendar = "^5.0.12"
requests = "^2.31.0"
python-telegram-bot = "^21.4"
thefuzz = "^0.22.1"
holidays = "^0.83"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
black = "^25.9.0"
isort = "^7.0.0"
ruff = "^0.14.1"
pytest-asyncio = "^1.2.0"

[tool.poetry.group.dashboard.dependencies]
Flask = "^3.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
