[tool.poetry]
name = "DumpDate"
version = "0.1.0"
description = "DumpDate is a smart reminder bot that keeps track of the local garbage collection schedule in Dresden and notifies you before pickup."
authors = ["Kester"]
license = "MIT"
readme = "README.md"
packages = [{include = "schedule_parser"}, {include = "telegram_bot"}, {include = "dashboard"}, {include = "dump_date"}]

[tool.poetry.dependencies]
python = ">=3.12"
icalendar = "^6.3.2"
requests = "^2.32.5"
python-telegram-bot = {extras = ["rate-limiter"], version = "^22.5"}
thefuzz = "^0.22.1"
holidays = "^0.85"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.1"
black = "^25.11.0"
isort = "^7.0.0"
ruff = "^0.14.7"
pytest-asyncio = "^1.3.0"

[tool.poetry.group.dashboard.dependencies]
Flask = "^3.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
